// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Autocomplete> Props should render correctly when the dropdown is closed 1`] = `
<div
  className="lumx-autocomplete"
>
  <TextField
    inputRef={[Function]}
    onChange={[MockFunction]}
    textFieldRef={
      Object {
        "current": null,
      }
    }
    theme="light"
    type="text"
    value=""
  />
  <Dropdown
    anchorRef={
      Object {
        "current": null,
      }
    }
    closeOnClick={false}
    closeOnClickAway={true}
    closeOnEscape={true}
    fitToAnchorWidth={true}
    fitWithinViewportHeight={true}
    isOpen={false}
    placement="bottom-start"
    shouldFocusOnOpen={false}
  >
    <List
      isClickable={true}
    >
      <ListItem
        key="losangeles"
        size="tiny"
      >
        <div>
          Los Angeles
        </div>
      </ListItem>
      <ListItem
        key="sanfrancisco"
        size="tiny"
      >
        <div>
          San Francisco
        </div>
      </ListItem>
      <ListItem
        key="paris"
        size="tiny"
      >
        <div>
          Paris
        </div>
      </ListItem>
      <ListItem
        key="montpellier"
        size="tiny"
      >
        <div>
          Montpellier
        </div>
      </ListItem>
      <ListItem
        key="bordeaux"
        size="tiny"
      >
        <div>
          Bordeaux
        </div>
      </ListItem>
      <ListItem
        key="toulouse"
        size="tiny"
      >
        <div>
          Toulouse
        </div>
      </ListItem>
      <ListItem
        key="lyon"
        size="tiny"
      >
        <div>
          Lyon
        </div>
      </ListItem>
      <ListItem
        key="montevideo"
        size="tiny"
      >
        <div>
          Montevideo
        </div>
      </ListItem>
    </List>
  </Dropdown>
</div>
`;

exports[`<Autocomplete> Snapshots and structure should render correctly 1`] = `
<div
  className="lumx-autocomplete"
>
  <TextField
    inputRef={[Function]}
    isRequired={true}
    label="Field label"
    onChange={[MockFunction]}
    textFieldRef={
      Object {
        "current": null,
      }
    }
    theme="light"
    type="text"
    value=""
  />
  <Dropdown
    anchorRef={
      Object {
        "current": null,
      }
    }
    closeOnClick={false}
    closeOnClickAway={true}
    closeOnEscape={true}
    fitToAnchorWidth={true}
    fitWithinViewportHeight={true}
    isOpen={true}
    placement="bottom-start"
    shouldFocusOnOpen={false}
  >
    <List
      isClickable={true}
    >
      <ListItem
        key="losangeles"
        size="tiny"
      >
        <div>
          Los Angeles
        </div>
      </ListItem>
      <ListItem
        key="sanfrancisco"
        size="tiny"
      >
        <div>
          San Francisco
        </div>
      </ListItem>
      <ListItem
        key="paris"
        size="tiny"
      >
        <div>
          Paris
        </div>
      </ListItem>
      <ListItem
        key="montpellier"
        size="tiny"
      >
        <div>
          Montpellier
        </div>
      </ListItem>
      <ListItem
        key="bordeaux"
        size="tiny"
      >
        <div>
          Bordeaux
        </div>
      </ListItem>
      <ListItem
        key="toulouse"
        size="tiny"
      >
        <div>
          Toulouse
        </div>
      </ListItem>
      <ListItem
        key="lyon"
        size="tiny"
      >
        <div>
          Lyon
        </div>
      </ListItem>
      <ListItem
        key="montevideo"
        size="tiny"
      >
        <div>
          Montevideo
        </div>
      </ListItem>
    </List>
  </Dropdown>
</div>
`;
